modifying model and adding css

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -1,17 +1,15 @@
 <html lang='en'>
 <head>
     <meta charset='utf-8'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='../static/style.css'>
     <script src='../static/client.js'></script>
 </head>
 <body>
 <div>
     <div class='center'>
-        <div class='title'>Classify Bear Images 🐻</div>
-        <p>
-            Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
-            all three!
-        </p>
+        <div class='title'>Spot The Mask</div>
+        
         <div class='content'>
             <div class='no-display'>
                 <input id='file-input'
@@ -36,6 +34,11 @@
             </div>
         </div>
     </div>
+</div>
+<div class='links'>
+<a href="https://twitter.com/Ahmed60Z/" class="fa fa-twitter"></a>
+<a href="https://www.linkedin.com/in/ahmed-zak/" class="fa fa-linkedin"></a>
+<a href="https://github.com/ahmedzak1" class="fa fa-github"></a>
 </div>
 </body>
 </html>
