--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,7 +1,10 @@
 body {
-    background-color: #fff;
+    background: #2c3e50;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #3498db, #2c3e50);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #3498db, #2c3e50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+       
 }
-
 .no-display {
     display: none;
 }
@@ -16,10 +19,10 @@ body {
 }
 
 .title {
-    font-size: 30px;
+    font-size: 60px;
     margin-top: 1em;
     margin-bottom: 1em;
-    color: #262626;
+    color: #ffffff;
 }
 
 .content {
@@ -62,3 +65,33 @@ button.analyze-button {
 }
 
 button:focus {outline:0;}
+
+.fa {  
+    width: 25px;
+    padding: 20px;
+    font-size: 25px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    color: white;
+    border-radius: 50%; 
+  }
+  .fa:hover {
+    opacity: 0.7;
+}
+.fa-twitter {
+    background: #55ACEE;
+  }
+  
+  .fa-linkedin {
+    background: #007bb5;
+  }
+  .fa-github {
+    background: #000000;
+  }
+  
+  .links{
+      margin-left: 565px;
+      margin-top: 50px;
+  }
+ 
